--- a/style.css
+++ b/style.css
@@ -19,8 +19,32 @@ main {
 	display: inline-block;
 }
 
-.enabled-flag {
-	background-color: red;
+.btn {
+	position: relative;
+	outline: none;
+	border: none;
+}
+
+.flag-icon:before {
+	content: "";
+	position: absolute;
+	top: 3px;
+	right: 8px;
+	display: block;
+	height: 23px;
+	width: 3px;
+	background-color: #263238;
+}
+
+.flag-icon:after {
+	content: "";
+	position: absolute;
+	top: 3px;
+	right: 11px;
+	display: block;
+	border-style: solid;
+	border-width: 8px 11px 8px 0;
+	border-color: transparent #f44336 transparent transparent;
 }
 
 .container {
@@ -35,6 +59,10 @@ main {
 
 .disabled {
 	pointer-events: none;
+}
+
+.hidden {
+	display: none;
 }
 
 .square {
@@ -53,10 +81,6 @@ main {
 
 .square:hover {
 	opacity: 0.9;
-}
-
-.square:active {
-	box-shadow: 0.3vw 0.3vw 0.3vw 0.3vw #f1f1f1 inset, -0.3vw -0.3vw 0.3vw 0.3vw #aaa inset;
 }
 
 .square--open {
@@ -121,10 +145,6 @@ main {
 		height: 3vw;
 		box-shadow: 0.15vw 0.15vw 0.15vw 0.15vw #f1f1f1 inset, -0.15vw -0.15vw 0.15vw 0.15vw #aaa inset;
 		border-radius: 0.3vw;
-	}
-
-	.square:active {
-		box-shadow: 0.08vw 0.08vw 0.08vw 0.08vw #f1f1f1 inset, -0.08vw -0.08vw 0.08vw 0.08vw #aaa inset;
 	}
 
 	.square--open {
