--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ main {
 	position: relative;
 	outline: none;
 	border: none;
+	cursor: pointer;
 }
 
 .flag-icon:before {
@@ -137,6 +138,71 @@ main {
 	border-color: red;
 }
 
+h2 {
+	margin: 6px;
+}
+
+table {
+	width: 100%;
+}
+
+.popup-container {
+	position: absolute;
+    display: flex;
+	align-items: center;
+	left: 0;
+	top: 0;
+	height: 100vh;
+	width: 100vw;
+	transition: height .5s;
+}
+
+.popup-container.hidden {
+	height: 0vh;
+}
+
+.perspective {
+	position: relative;
+	margin: 0 auto;
+	width: 90vw;
+	height: 70vh;
+	-webkit-perspective: 1000px;
+	perspective: 1000px;
+	transition: height .6s;
+}
+
+.popup-container.hidden .perspective {
+	height: 0vh;
+}
+
+.popup {
+	position: absolute;
+	background: white;
+	border-radius: 12px;
+	padding: 6px;
+	transform-style: preserve-3d;
+	transform: rotateX(0deg);
+	opacity: 1;
+	transition: transform .2s ease-in-out, opacity .2s ease-in-out, top .3s ease-in-out;
+	top: 0;
+}
+
+.popup-container.hidden .popup {
+	transform: rotateX(-90deg);
+	opacity: 0;
+	top: -95px;
+}
+
+.btn-close {
+	position: absolute;
+	right: 6px;
+	display: inline-block;
+	font-size: 24px;
+	height: 24px;
+    width: 24px;
+    line-height: 24px;
+}
+
 @media only screen and (min-width: 640px) {
 
 	.square {
@@ -150,5 +216,9 @@ main {
 	.square--open {
 		box-shadow: initial;
 		background-color: #ccc;
+	}
+
+	.popup, .perspective {
+		width: 30vw;
 	}
 }
