--- a/style.css
+++ b/style.css
@@ -2,34 +2,72 @@ html {
 	overflow: hidden;
 }
 
+a {
+	color: #212121
+}
 body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Nunito', sans-serif;
+	font-size: 1em;
 	text-align: center;
-	margin: 0 auto;
-	height: 100%;
-	width: 100%;
+	color: #212121;
+	background-color: #E0E0E0;
 }
 
-header {
-	height: 3em;
+.container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 100vw;
+}
+
+.app-container {
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+	width: 100vw;
+}
+
+.side {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-grow: 1;
 }
 
 main {
+	display: flex;
 	text-align: center;
-	background-color: #999;
+	background-color: #1A237E;
 }
 
-.control {
-	display: inline-block;
+.header-item {
+	margin: auto;
 }
 
-.btn {
-	position: relative;
-	outline: none;
-	border: none;
-	cursor: pointer;
+.label {
+	background-color: #212121;
+	padding: 6px;
+	border-radius: 6px;
+	color: #EEEEEE;
+}
+
+.square-container {
+	height: 100vw;
+	width: 100vw;
+	/* Disable text selection */
+	user-select: none;
+	padding-top: 3px;
+}
+
+.button-area {
+	margin: auto;
+}
+
+.madeby-area {
+	margin: auto;
 }
 
 .flag-icon:before {
@@ -40,7 +78,11 @@ main {
 	display: block;
 	height: 23px;
 	width: 3px;
-	background-color: #263238;
+	background-color: #EEEEEE;
+}
+
+.square--open.flag-icon:before {
+	background-color: #212121;
 }
 
 .flag-icon:after {
@@ -54,16 +96,6 @@ main {
 	border-color: transparent #f44336 transparent transparent;
 }
 
-.square-container {
-	line-height: 0;
-	display: inline-block;
-	vertical-align: middle;
-	border-spacing: 2px 1px;
-	height: 100%;
-	/* Disable text selection */
-	user-select: none;
-}
-
 .disabled {
 	pointer-events: none;
 }
@@ -72,17 +104,42 @@ main {
 	display: none;
 }
 
+.emoji {
+	width: inherit;
+    height: inherit;
+	background-repeat: no-repeat;
+	background-size: 100%;
+	background-position: center;
+}
+
+.emoji--smile {
+	background-image: url('https://cdn.jsdelivr.net/emojione/assets/5.0/png/unicode/64/1f642.png');
+}
+
+.emoji--cool {
+	background-image: url('https://cdn.jsdelivr.net/emojione/assets/5.0/png/unicode/64/1f60e.png');
+}
+
+.emoji--o {
+	background-image: url('https://cdn.jsdelivr.net/emojione/assets/5.0/png/unicode/64/1f632.png');
+}
+
+.emoji--dead {
+	background-image: url('https://cdn.jsdelivr.net/emojione/assets/5.0/png/unicode/64/1f480.png');
+}
+
 .square {
+	justify-content: center;
+	align-items: center;
 	font-size: 10vw;
 	vertical-align: middle;
-	text-align: center;
 	box-sizing: border-box;
-	width: 10vw;
-	height: 10vw;
-	display: table-cell;
-	background-color: #ccc;
-	box-shadow: 0.5vw 0.5vw 0.5vw 0.5vw #f1f1f1 inset, -0.5vw -0.5vw 0.5vw 0.5vw #aaa inset;
-	border-radius: 1vw;
+	width: 11%;
+	height: 11%;
+	display: inline-flex;
+	background-color: #3F51B5;
+	box-shadow: 0.5vw 0.5vw 0.5vw 0.5vw #5C6BC0 inset, -0.5vw -0.5vw 0.5vw 0.5vw #283593 inset;
+	border-radius: 12%;
 	transition: box-shadow 0.1s ease-in-out, background-color 0.1s ease-in-out;
 }
 
@@ -92,7 +149,8 @@ main {
 
 .square--open {
 	box-shadow: initial;
-	background-color: #ccc;
+	background-color: #EEEEEE;
+	border: .5px solid #1A237E;
 }
 
 .square--open:hover {
@@ -135,13 +193,32 @@ main {
 	color: #757575;
 }
 
+.btn {
+	position: relative;
+	outline: none;
+	border: none;
+	cursor: pointer;
+	height: 11vw;
+	width: 11vw;
+	color: #EEEEEE;
+}
+
 .flag {
 	background-color: red;
 }
 
 .square--bomb {
-	border-width: 0px;
-	border-color: red;
+	background-image: url('https://cdn.jsdelivr.net/emojione/assets/5.0/png/unicode/64/1f4a3.png');
+	background-repeat: no-repeat;
+	background-size: 80%;
+	background-position: center;
+}
+
+.square--exploded {
+	background-image: url('https://cdn.jsdelivr.net/emojione/assets/5.0/png/unicode/64/1f4a5.png');
+	background-repeat: no-repeat;
+	background-size: 80%;
+	background-position: center;
 }
 
 h2 {
@@ -170,7 +247,7 @@ table {
 .perspective {
 	position: relative;
 	margin: 0 auto;
-	width: 90vw;
+	width: 93vw;
 	height: 70vh;
 	-webkit-perspective: 1000px;
 	perspective: 1000px;
@@ -196,7 +273,7 @@ table {
 .popup-container.hidden .popup {
 	transform: rotateX(-90deg);
 	opacity: 0;
-	top: -140px;
+	top: -150px;
 }
 
 .btn-close {
@@ -206,16 +283,37 @@ table {
 	font-size: 24px;
 	height: 24px;
     width: 24px;
-    line-height: 24px;
+	line-height: 24px;
+	color: #212121;
 }
 
-@media only screen and (orientation: landscape) {
-	body {
-		background-color: #009688;
+@media only screen and (max-height: 450px) and (orientation: landscape) {
+	.app-container {
+		flex-direction: row;
+	}
+
+	header {
+		flex-direction: column;
+		flex-grow: 1;
+	}
+
+	footer {
+		flex-direction: column;
+		flex-grow: 1;
+	}
+
+	.main-item {
+		display: flex;
+		height: 100vh;
+		width: 100vh;
+	}
+
+	.madeby-area {
+		display: none;
 	}
 }
 
-@media only screen and (min-width: 640px) {
+/* @media only screen and (min-width: 640px) {
 
 	.square {
 		font-size: 3vw;
@@ -233,4 +331,4 @@ table {
 	.popup, .perspective {
 		width: 70vw;
 	}
-}
+} */
