--- a/style.css
+++ b/style.css
@@ -73,11 +73,11 @@ main {
 .flag-icon:before {
 	content: "";
 	position: absolute;
-	top: 3px;
-	right: 8px;
+	top: 15%;
+	right: 34%;
 	display: block;
-	height: 23px;
-	width: 3px;
+	height: 70%;
+	width: 6%;
 	background-color: #EEEEEE;
 }
 
@@ -85,14 +85,18 @@ main {
 	background-color: #212121;
 }
 
+.square.flag-icon {
+	position: relative;
+}
+
 .flag-icon:after {
 	content: "";
 	position: absolute;
-	top: 3px;
-	right: 11px;
+	top: 15%;
+	right: 40%;
 	display: block;
 	border-style: solid;
-	border-width: 8px 11px 8px 0;
+	border-width: 2vw 3vw 2vw 0;
 	border-color: transparent #f44336 transparent transparent;
 }
 
@@ -192,17 +196,12 @@ main {
 }
 
 .btn {
-	position: relative;
 	outline: none;
 	border: none;
 	cursor: pointer;
 	height: 11vw;
 	width: 11vw;
 	color: #EEEEEE;
-}
-
-.flag {
-	background-color: red;
 }
 
 .square--bomb {
