Turn off square animation

--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ main {
 	background-color: #3F51B5;
 	box-shadow: 0.5vw 0.5vw 0.5vw 0.5vw #5C6BC0 inset, -0.5vw -0.5vw 0.5vw 0.5vw #283593 inset;
 	border-radius: 12%;
-	transition: box-shadow 0.1s ease-in-out, background-color 0.1s ease-in-out;
+	/* transition: box-shadow 0.1s ease-in-out, background-color 0.1s ease-in-out; */
 }
 
 .square:hover {
