--- a/style.css
+++ b/style.css
@@ -242,30 +242,26 @@ table {
 	position: relative;
 	margin: 0 auto;
 	height: 95vh;
-	/* -webkit-perspective: 1000px;
-	perspective: 1000px;  */
-	transition: height .6s;
+	transition: transform .6s;
 }
 
 .popup-container.hidden .perspective {
-	height: 0vh;
+	transform: translateY(-100vh);
 }
 
 .popup {
 	background: white;
 	border-radius: 12px;
 	padding: 12px;
-	/* transform-style: preserve-3d; */
 	transform: rotateX(0deg);
 	opacity: 1;
-	transition: transform .2s ease-in-out, opacity .15s ease-in-out, top .3s ease-in-out;
+	transition: transform .2s ease-in-out, opacity .15s ease-in-out;
 	width: 90vw;
 }
 
 .popup-container.hidden .popup {
 	transform: rotateX(-90deg);
 	opacity: 0;
-	top: -150px;
 }
 
 .btn-close {
