--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ main {
 	background-color: #212121;
 	padding: 6px;
 	border-radius: 6px;
+	font-size: 5vw;
 	color: #EEEEEE;
 }
 
@@ -299,6 +300,10 @@ table {
 		flex-direction: column;
 	}
 
+	.label {
+		font-size: 5vh;
+	}
+
 	.main-item {
 		display: flex;
 		height: 100vh;
@@ -336,6 +341,10 @@ table {
 }
 
 @media only screen and (min-width: 450px) and (min-height: 450px) {
+
+	.label {
+		font-size: 1em;
+	}
 
 	.app-container {
 		display: flex;
