--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 html {
 	overflow: hidden;
 	/* Disable text selection */
-	user-select: none;
+	-webkit-touch-callout: none;
+    	-webkit-user-select: none;
+    	-khtml-user-select: none;
+    	-moz-user-select: none;
+    	-ms-user-select: none;
+    	user-select: none;
 }
 
 a {
